<resources>
    <string name="app_name">PetCircle</string>
    <string name="Log_in">Log In</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Name">Name </string>
    <string name="NickName">NickName </string>
    <string name="Phone">Phone</string>
    <string name="Public">Public</string>
    <string name="New">Whats New</string>
    <string name="Anecdote">Anecdote</string>
    <string name="Health">Health</string>
    <string name="Alimentation">Alimentation</string>
    <string name="Questions">Questions</string>
    <string name="Adoption">Adoption</string>
    <string name="Forfun">For fun</string>
    <string name="Profile">Profile</string>
    <string name="MyPosts">My Posts</string>
    <string name="LogOut">Log Out</string>
    <string name="Save">Save</string>
    <string name="navDraweOpen">Open navigation drawer</string>
    <string name="navDraweClose">Close navigation drawer</string>
    <string name="title">Title Post</string>
    <string name="body">Body Post</string>
    <string name="post">Post</string>
    <string name="required">Required</string>
    <string name="editPro">Edit Profile</string>

</resources>