<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/light_backgound">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/light_backgound" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/editPro"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/myToolbar"
        app:layout_constraintEnd_toEndOf="@+id/myToolbar"
        app:layout_constraintStart_toStartOf="@+id/myToolbar"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/light_backgound"
        android:clipToOutline="true"
        android:contentDescription="Imagen de perfil"
        android:outlineProvider="background"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:contentDescription="Seleccionar imagen de perfil"
        android:src="@drawable/pen"
        app:backgroundTint="@color/beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="181dp"
        android:layout_height="62dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/light_brown"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/Save"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="235dp"
        android:ems="10"

        app:boxStrokeColor="@color/brown"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="#6C6C6C"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/montserrat_medium"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:boxStrokeColor="@color/brown"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailContainer"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:textColor="#000000"
            android:textSize="18sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"

        android:layout_marginTop="96dp"
        android:ems="10"
        app:boxStrokeColor="@color/brown"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:lines="1"
            android:textColor="#000000"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="96dp"
        app:boxStrokeColor="@color/brown"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/Phone"
            android:inputType="number"
            android:lines="1"
            android:textColor="#000000"
            android:textSize="18sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NickNameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"

        android:layout_marginTop="96dp"
        android:ems="10"
        app:boxStrokeColor="@color/brown"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/NameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NickNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/NickName"
            android:inputType="textPersonName"
            android:lines="1"
            android:textColor="#000000"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>