<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF0"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/brownDog"
        android:layout_width="143dp"
        android:layout_height="144dp"
        android:contextClickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perrogrande" />


    <ImageView
        android:id="@+id/whiteDog"
        android:layout_width="143dp"
        android:layout_height="144dp"
        android:contextClickable="false"
        android:tint="@color/white"
        app:srcCompat="@drawable/perrogrande"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="359dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:fontFamily="@font/montserrat_extrabold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />

    <Button
        android:id="@+id/btn_LogIn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#867869"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/Log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#857869"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="143dp"
        android:layout_height="144dp"
        android:contextClickable="false"
        app:srcCompat="@drawable/logocompleto"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="212dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>